public/style.css
@import url('https://fonts.googleapis.com/css?family=Oswald');

html, body {
  margin: 0px;
  padding: 0px;
  border: 0px;
  width: 100%;
}
html {
  scroll-behavior: smooth;
}

#app{
  background: no-repeat center url('./images/websitebackground.png');
  background-size: 80%;
  background-attachment: fixed;
}

@media only screen and (max-width: 600px) {
  #app {
    width: 100%;
  }
}

body h1 h2 h3 h4 Link a p div button{
  font-family: 'Oswald', sans-serif;
}

a {
  text-decoration: none;
}

label {
  display: block;
}

form div {
  margin: 1em;
  display: inline-block;
}

#app {
  font-family: 'Oswald', sans-serif;
}

/* Map Styles */

path {
  pointer-events: all;
}
path:hover {
  opacity: 0.50;
  cursor: pointer;
}
.discover {
  display: flex;
  flex-direction: column;
  text-align: center;
  justify-content: space-between;
  margin-top: 7em;
}
.discover h1 {
  font-family: 'Oswald', sans-serif;
}
.Map {
  display: flex;
  justify-content: space-around;
}

.allArtistsButton {
  margin-top: 40px;
  width: 150px;
  height: 50px;
  color: whitesmoke;
  background-color: black;
  transition: 0.3s;
  font-size: 1em;
  font-family: 'Oswald', sans-serif;
  cursor: pointer;
}

.allArtistsButton:hover {
  background-color: whitesmoke;
  color: black;
  transform: scale(1.2);
}

.genreDiv {
  margin-top: -24px;
}

.allAndGlobe {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}
.globe {
  border: solid black;
  padding: 10px;
  border-radius: 80px;
  cursor: pointer;
}

.globeLabel {
  color: black;
  text-decoration: none;
  font-size: 1.2em;
}

.internationalLink {
  transition: 0.3s;
}

.internationalLink:hover {
  transform: scale(1.2);
}

@media only screen and (max-width: 600px) {
  .discover {
    width: 100%;
  }
  .Map {
    margin-top: -15px;
    margin-bottom: -156px;
  }
  .allAndGlobe a {
    height: 0px;
  }
  .allArtistsButton {
    width: 7em;
    height: 3em;
    font-size: 1em;
  }
  .globe {
    height: 90px;
    width: 90px;
  }
  .globeLabel {
    font-size: 1em;
  }
}

@media only screen and (min-width: 600px) and (max-width:900px) {
  .genreDiv {
    margin-top: -20px;
  }
  .Map {
    margin-top: 40px;
  }
  .allAndGlobe{
    margin-top: 20px;
  }
  .allArtistsButton {
    margin-top: 75px;
    width: 170px;
    height: 70px;
    font-size: 1em;
  }
  .allArtistsButton {
    margin-top: 32px;
    width: 139px;
    height: 50px;
    font-size: 1.1em;
  }
  .allArtistsLink {
    height: 0px;
  }
  .internationalLink {
    margin-top: 45;
  }
  .globe {
    border-radius: 80px;
    height: 150px;
    width: 150px;
  }
  .globeLabel {
    font-size: 1em;
    margin-bottom: -23px;
  }
}

@media only screen and (min-width: 1400px) and (max-width: 1800px) {
  .discover {
    margin-top: 10em;
  }
  .discover h1 {
    font-size: 3em;
    margin-bottom: 55px;
  }
  .allAndGlobe a {
    height: 0px;
  }
  .allArtistsButton {
    width: 150px;
    height: 50px;
    font-size: 1.3em;
  }
  .globe {
    border-radius: 98px;
    height: 200px;
    width: 200px;
  }
  .Map svg {
    height: 661px;
    width: 1081px;
    margin-top: 13em;
  }
}

@media only screen and (min-width: 1800px) {
  .discover {
    margin-top: 10em;
  }
  .discover h1 {
    font-size: 3em;
  }
  .allAndGlobe {
    margin-top: 5em;
  }
  .allAndGlobe a {
    height: 0px;
  }
  .allArtistsButton {
    width: 208px;
    height: 65px;
    font-size: 1.7em;
  }
  .globe {
    border: solid black 6px;
    padding: 17px;
    border-radius: 191px;
    height: 200px;
    width: 200px;
  }
  .globeLabel {
    font-size: 2.8em;
    margin-top: 11px;
  }
  .Map {
    margin-top: 8em;
  }
  .Map svg {
    height: 86em;
    width: 92em;
  }
}

/* Footer Styles */

.footerDiv {
  text-align: center;
}

.footerDiv h6 {
  font-size: 1em;
}

@media only screen and (min-width: 1400px) {
  .footerDiv h6 {
    font-size: 1.5em;
  }
}


/* NAVBAR STYLES */
.navbar {
  display: flex;
  flex-direction: row;
  background-color: #141210;
  text-align: center;
  height: 104px;
  justify-content: space-between;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
}

.navOptions {
  background-color: #141210;
  margin-top: -1px;
  position: relative;
}

.badGreyTextLogo {
  height: 100px;
  width: 100px;
  cursor: pointer;
  margin-left: 1em;
}
.badGreyWolfLogo {
  height: 100px;
  width: 100px;
  cursor: pointer;
}

.badGreyTextLogo:hover {
  opacity: 0.50;
}

.badGreyWolfLogo:hover {
  opacity: 0.50;
}

.badgrey {
  height: 110px;
  width: 110px;
  margin-right: 57px;
}

nav a {
  display: inline-block;
  margin: 1em;
  color: ghostwhite;
  cursor: pointer;
}

.navLinks {
  display: flex;
  justify-content: space-between;
}

.navList a{
  color: whitesmoke;
  cursor: pointer;
}

.navList {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  flex-grow: 0.8;
  margin-top: 78px;
  margin-left: 22em;
  color: whitesmoke;
  margin-right: 41px;
}

.navList a:hover {
  color: grey;
}

.singleNavOption a:hover {
  color: grey;
}

@media only screen and (max-width: 340px) {
  .navbar {
    width: 100%;
  }
}
@media only screen and (max-width: 400px) {
  .navbar {
    width: 100%;
  }
}

@media only screen and (max-width: 600px) {
  .navbar {
    width: 100%;
  }
  .nav {
    width: 100%;
  }
  .badgrey {
    height: 90px;
    width: 90px;
    margin-top: 13px;
  }
  .badGreyWolfLogo {
    height: 70px;
    width: 70px;
    margin-top: 10px;
  }
  .navOptions {
    position: relative;
  }
  .navList {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin: 0px;
  }

}

@media only screen and (min-width: 600px) and (max-width:900px) {
  .navbar {
    width: 100%;
  }
  .navList {
    margin-left: 2em;
    margin-right: 0;
}
}
/* ... */

